--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,6 @@
 <div class="edu-institution"><b><i>Institution:</i></b> Institute of Developmental Biology and Neurobiology (iDN)</div>
 <div class="edu-thesis"><b><i>Dissertation Title:</i></b> Interactive Biomaterials for Neural Regeneration(InteReg)</div>
 <div class="edu-pis"><b><i>PIs:</i></b> 
-    
     <a href="https://fnb-idn.biologie.uni-mainz.de/" target="_blank" style="color: inherit; text-decoration: none;">Prof. Dr. Martin Heine</a>,
     <a href="https://cnb-idn.biologie.uni-mainz.de/" target="_blank" style="color: inherit; text-decoration: none;">Prof. Dr. Claire Jacob</a>,
     <a href="https://cnb-idn.biologie.uni-mainz.de/" target="_blank" style="color: inherit; text-decoration: none;">Dr. Himanshu Kumar Mishra</a>
@@ -1159,7 +1158,11 @@
 <div class="edu-institute vb-font"><strong>Visva-Bharati</strong> <span class="edu-country">| India</span></div>
 <div class="edu-institution"><b><i>Institution:</i></b> Integrated Science Education and Research Centre (ISERC)</div>
 <div class="edu-thesis"><b><i>Dissertation Title:</i></b> High-content screening(HCS) for neurite growth analyses: Evaluating gene treatments</div>
-<div class="edu-pis"><b><i>PI:</i></b> Dr. Ishwariya Venkatesh, Senior Scientist, CSIR-Centre for Cellular and Molecular Biology (CCMB), India.</div>
+<div class="edu-pis">
+  <b><i>PI:</i></b> 
+  <a href="https://www.ccmb.res.in/People/Research-Group/Ishwariya-Venkatesh" target="_blank" style="color: inherit; text-decoration: none;">
+    Dr. Ishwariya Venkatesh
+  </a>, Senior Scientist and Group Leader, Laboratory of Axon Growth and Regeneration at CSIR-Centre for Cellular and Molecular Biology(CCMB), India.
 </div>
 </div>
 </div>
