--- a/index.html
+++ b/index.html
@@ -1174,33 +1174,19 @@
 <div class="carousel-item">
 <img alt="Project 1" src="Neural-cells-Biomaterials.jpg"/>
 <div class="item-info">
-<h3>PhD Topic: Interactive Biomaterials for Neural Regeneration (InteReg)</h3>
+<h3>PhD Topic: <a href="https://intereg.uni-mainz.de/" target="_blank" style="color: inherit; text-decoration: none;">Interactive Biomaterials for Neural Regeneration (InteReg)</a></h3>
 <p>
-              Traumatic injuries to the central nervous system (CNS), including brain and spinal cord damage, result in poor regeneration and lasting disability due to multiple barriers: glial scar formation, inhibitory debris, lack of axonal guidance, and inefficient remyelination. Similarly, Multiple Sclerosis (MS) is a chronic autoimmune demyelinating disease where oligodendrocytes are attacked, leading to axonal dysfunction. While early remyelination by OPCs is possible, it declines with disease progression, and no current therapies promote regeneration effectively.<br/><br/>
-              Our team aims to develop precision-engineered biomaterials to support CNS regeneration in trauma and MS. 
-                <h3>Project Aims</h3>
-<ul class="aims-list">
-<li>
-<strong>Aim 1:</strong>
-                    Design ECM-mimicking materials with bioactive and mechano-responsive properties to deliver pro-regenerative factors
-                    <span class="aim-leads">(Leads: Walther, Besenius, Jacob, Heine)</span>.
-                  </li>
-<li>
-<strong>Aim 2:</strong>
-                    Create cell-targeted nanocapsules to reprogram cells into repair-promoting phenotypes
-                    <span class="aim-leads">(Leads: Landfester, Mailänder, Jacob, Papic, Berninger, Weil)</span>.
-                  </li>
-<li>
-<strong>Aim 3:</strong>
-                    Engineer nanomaterials that cross the blood-brain barrier (BBB)
-                    <span class="aim-leads">(Leads: Landfester, Mailänder, Walther, Waisman)</span>.
-                  </li>
-<li>
-<strong>Aim 4:</strong>
-                    Develop advanced models, including vascularized brain organoids, to test delivery and therapeutic efficacy
-                    <span class="aim-leads">(Leads: Villiou, Walther, Mishra, Lutz, Berninger, Heine, Jacob)</span>.
-                  </li>
-</ul>
+    Traumatic injuries to the central nervous system (CNS), including brain and spinal cord damage, result in poor regeneration and lasting disability due to multiple barriers: glial scar formation, inhibitory debris, lack of axonal guidance, and inefficient remyelination. Similarly, Multiple Sclerosis (MS) is a chronic autoimmune demyelinating disease where oligodendrocytes are attacked, leading to axonal dysfunction. While early remyelination by OPCs is possible, it declines with disease progression, and no current therapies promote regeneration effectively.<br/><br/>
+    To this end, interactive synthetic biomaterials are to be developed that stimulate cell growth and regeneration through a suitable environment and also enable a controlled and targeted release of drugs for high efficacy and low risks of side effects. InteReg is an interdisciplinary research consortium dedicated to developing therapeutic solutions using interactive biomaterials to treat neurodegenerative diseases like multiple sclerosis and traumatic injuries such as brain and spinal cord damage, through a collaborative approach that integrates neurobiology, neuroimmunology, chemistry, and polymer research at Mainz University and the Max Planck Institute for Polymer Research.<br/><br/>
+    Our team aims to develop precision-engineered biomaterials to support CNS regeneration in trauma and MS. 
+  <h3>Project Aims</h3>
+  <ul class="aims-list">
+    <li><strong>Aim 1:</strong> Design ECM-mimicking materials with bioactive and mechano-responsive properties to deliver pro-regenerative factors <span class="aim-leads">(Leads: Walther, Besenius, Jacob, Heine)</span>.</li>
+    <li><strong>Aim 2:</strong> Create cell-targeted nanocapsules to reprogram cells into repair-promoting phenotypes <span class="aim-leads">(Leads: Landfester, Mailänder, Jacob, Papic, Berninger, Weil)</span>.</li>
+    <li><strong>Aim 3:</strong> Engineer nanomaterials that cross the blood-brain barrier (BBB) <span class="aim-leads">(Leads: Landfester, Mailänder, Walther, Waisman)</span>.</li>
+    <li><strong>Aim 4:</strong> Develop advanced models, including vascularized brain organoids, to test delivery and therapeutic efficacy <span class="aim-leads">(Leads: Villiou, Walther, Mishra, Lutz, Berninger, Heine, Jacob)</span>.</li>
+  </ul>
+  <span style="font-size: 0.95rem; color: #475569;"><strong>Source:</strong> <a href="https://press.uni-mainz.de/biomaterials-to-regenerate-the-nervous-system-carl-zeiss-foundation-sponsors-intereg-project-at-mainz-university/" style="color: inherit; text-decoration: none;">JGU Press Release</a></span>
 </p>
 </div>
 </div>
