--- a/index.html
+++ b/index.html
@@ -1096,19 +1096,19 @@
 <div class="hero-img-side">
 <img alt="Profile Picture" class="profile-pic" src="your-profile-picture.jpg"/>
 <div class="social-links hero-social">
-<a class="facebook" href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
+<a aria-label="Facebook" class="facebook" href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
 <img alt="Facebook Logo" src="facebookff.jpg"/>
 </a>
 <a class="instagram" href="https://www.instagram.com/arupambiswas/" target="_blank">
 <img alt="Instagram Logo" src="InstagramF.jpg"/>
 </a>
-<a class="linkedin" href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
+<a aria-label="LinkedIn" class="linkedin" href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
 <img alt="LinkedIn Logo" src="linkedIn.jpg"/>
 </a>
 <a class="twitter" href="https://x.com/arupamb07" target="_blank">
 <img alt="X Logo" src="twitterFL.jpg"/>
 </a>
-<a class="gmail" href="mailto:arupambiswas007@gmail.com" target="_blank">
+<a aria-label="Email" class="gmail" href="mailto:arupambiswas007@gmail.com" target="_blank">
 <img alt="Gmail Logo" src="gmail.jpg"/>
 </a>
 </div>
@@ -1128,8 +1128,8 @@
 <!-- Mainz -->
 <div class="edu-item">
 <div class="edu-logo-box mainz">
-<img alt="Mainz Logo" src="JGU2.jpg">
-</img></div>
+<img alt="Mainz Logo" src="JGU2.jpg"/>
+</div>
 <div class="edu-details">
 <div class="edu-row">
 <span class="edu-degree"><strong>Doctoral Candidate in <span class="edu-major">Neuroscience</span></strong></span>
@@ -1138,18 +1138,18 @@
 <div class="edu-institute mainz-font"><strong>Johannes Gutenberg University Mainz</strong> <span class="edu-country">| Germany</span></div>
 <div class="edu-institution"><b><i>Institution:</i></b> Institute of Developmental Biology and Neurobiology (iDN)</div>
 <div class="edu-thesis"><b><i>Dissertation Title:</i></b> Interactive Biomaterials for Neural Regeneration(InteReg)</div>
-<div class="edu-pis"><b><i>PIs:</i></b> 
-    <a href="https://fnb-idn.biologie.uni-mainz.de/" target="_blank" style="color: inherit; text-decoration: none;">Prof. Dr. Martin Heine</a>,
-    <a href="https://cnb-idn.biologie.uni-mainz.de/" target="_blank" style="color: inherit; text-decoration: none;">Prof. Dr. Claire Jacob</a>,
-    <a href="https://cnb-idn.biologie.uni-mainz.de/" target="_blank" style="color: inherit; text-decoration: none;">Dr. Himanshu Kumar Mishra</a>
+<div class="edu-pis"><b><i>PIs:</i></b>
+<a href="https://fnb-idn.biologie.uni-mainz.de/" style="color: inherit; text-decoration: none;" target="_blank">Prof. Dr. Martin Heine</a>,
+    <a href="https://cnb-idn.biologie.uni-mainz.de/" style="color: inherit; text-decoration: none;" target="_blank">Prof. Dr. Claire Jacob</a>,
+    <a href="https://cnb-idn.biologie.uni-mainz.de/" style="color: inherit; text-decoration: none;" target="_blank">Dr. Himanshu Kumar Mishra</a>
 </div>
 </div>
 </div>
 <!-- Visva-Bharati -->
 <div class="edu-item">
 <div class="edu-logo-box vb">
-<img alt="Visva-Bharati Logo" src="VB.jpg">
-</img></div>
+<img alt="Visva-Bharati Logo" src="VB.jpg"/>
+</div>
 <div class="edu-details">
 <div class="edu-row">
 <span class="edu-degree"><strong>Five-Year Integrated M.Sc. in <span class="edu-major">Life Sciences</span></strong></span>
@@ -1159,14 +1159,14 @@
 <div class="edu-institution"><b><i>Institution:</i></b> Integrated Science Education and Research Centre (ISERC)</div>
 <div class="edu-thesis"><b><i>Dissertation Title:</i></b> High-content screening(HCS) for neurite growth analyses: Evaluating gene treatments</div>
 <div class="edu-pis">
-  <b><i>PI:</i></b> 
-  <a href="https://www.ccmb.res.in/People/Research-Group/Ishwariya-Venkatesh" target="_blank" style="color: inherit; text-decoration: none;">
+<b><i>PI:</i></b>
+<a href="https://www.ccmb.res.in/People/Research-Group/Ishwariya-Venkatesh" style="color: inherit; text-decoration: none;" target="_blank">
     Dr. Ishwariya Venkatesh
   </a>, Senior Scientist and Group Leader, Laboratory of Axon Growth and Regeneration at CSIR-Centre for Cellular and Molecular Biology(CCMB), India.
 </div>
 </div>
 </div>
-</section>
+</div></section>
 <section class="research-section" id="research">
 <h2>Research</h2>
 <div class="carousel">
@@ -1174,19 +1174,19 @@
 <div class="carousel-item">
 <img alt="Project 1" src="Neural-cells-Biomaterials.jpg"/>
 <div class="item-info">
-<h3>PhD Topic: <a href="https://intereg.uni-mainz.de/" target="_blank" style="color: inherit; text-decoration: none;">Interactive Biomaterials for Neural Regeneration (InteReg)</a></h3>
+<h3>PhD Topic: <a href="https://intereg.uni-mainz.de/" style="color: inherit; text-decoration: none;" target="_blank">Interactive Biomaterials for Neural Regeneration (InteReg)</a></h3>
 <p>
     Traumatic injuries to the central nervous system (CNS), including brain and spinal cord damage, result in poor regeneration and lasting disability due to multiple barriers: glial scar formation, inhibitory debris, lack of axonal guidance, and inefficient remyelination. Similarly, Multiple Sclerosis (MS) is a chronic autoimmune demyelinating disease where oligodendrocytes are attacked, leading to axonal dysfunction. While early remyelination by OPCs is possible, it declines with disease progression, and no current therapies promote regeneration effectively.<br/><br/>
     To this end, interactive synthetic biomaterials are to be developed that stimulate cell growth and regeneration through a suitable environment and also enable a controlled and targeted release of drugs for high efficacy and low risks of side effects. InteReg is an interdisciplinary research consortium dedicated to developing therapeutic solutions using interactive biomaterials to treat neurodegenerative diseases like multiple sclerosis and traumatic injuries such as brain and spinal cord damage, through a collaborative approach that integrates neurobiology, neuroimmunology, chemistry, and polymer research at Johannes Gutenberg University Mainz(JGU), the Max Planck Institute for Polymer Research(MPI-P), and the Leibniz Institute for Resilience Research(LIR).<br/><br/>
     Our team aims to develop precision-engineered biomaterials to support CNS regeneration in trauma and MS. 
   <h3>Project Aims</h3>
-  <ul class="aims-list">
-    <li><strong>Aim 1:</strong> Design ECM-mimicking materials with bioactive and mechano-responsive properties to deliver pro-regenerative factors <span class="aim-leads">(Leads: Walther, Besenius, Jacob, Heine)</span>.</li>
-    <li><strong>Aim 2:</strong> Create cell-targeted nanocapsules to reprogram cells into repair-promoting phenotypes <span class="aim-leads">(Leads: Landfester, Mailänder, Jacob, Papic, Berninger, Weil)</span>.</li>
-    <li><strong>Aim 3:</strong> Engineer nanomaterials that cross the blood-brain barrier (BBB) <span class="aim-leads">(Leads: Landfester, Mailänder, Walther, Waisman)</span>.</li>
-    <li><strong>Aim 4:</strong> Develop advanced models, including vascularized brain organoids, to test delivery and therapeutic efficacy <span class="aim-leads">(Leads: Villiou, Walther, Mishra, Lutz, Berninger, Heine, Jacob)</span>.</li>
-  </ul>
-  <span style="font-size: 0.95rem; color: #475569;"><strong>Source:</strong> <a href="https://press.uni-mainz.de/biomaterials-to-regenerate-the-nervous-system-carl-zeiss-foundation-sponsors-intereg-project-at-mainz-university/" style="color: inherit; text-decoration: none;">JGU Press Release</a></span>
+<ul class="aims-list">
+<li><strong>Aim 1:</strong> Design ECM-mimicking materials with bioactive and mechano-responsive properties to deliver pro-regenerative factors <span class="aim-leads">(Leads: Walther, Besenius, Jacob, Heine)</span>.</li>
+<li><strong>Aim 2:</strong> Create cell-targeted nanocapsules to reprogram cells into repair-promoting phenotypes <span class="aim-leads">(Leads: Landfester, Mailänder, Jacob, Papic, Berninger, Weil)</span>.</li>
+<li><strong>Aim 3:</strong> Engineer nanomaterials that cross the blood-brain barrier (BBB) <span class="aim-leads">(Leads: Landfester, Mailänder, Walther, Waisman)</span>.</li>
+<li><strong>Aim 4:</strong> Develop advanced models, including vascularized brain organoids, to test delivery and therapeutic efficacy <span class="aim-leads">(Leads: Villiou, Walther, Mishra, Lutz, Berninger, Heine, Jacob)</span>.</li>
+</ul>
+<span style="font-size: 0.95rem; color: #475569;"><strong>Source:</strong> <a href="https://press.uni-mainz.de/biomaterials-to-regenerate-the-nervous-system-carl-zeiss-foundation-sponsors-intereg-project-at-mainz-university/" style="color: inherit; text-decoration: none;">JGU Press Release</a></span>
 </p>
 </div>
 </div>
@@ -1267,7 +1267,6 @@
         -->
 <!-- Add more pub-item as needed -->
 </div>
-
 </section>
 <!-- SCI-COM SECTION -->
 <section class="scicom-section" id="scicom">
@@ -1292,29 +1291,29 @@
 </div>
 <div class="gallery-grid">
 <div class="gallery-item" data-tags="lab">
-<img alt="Lab work 1" src="retreat2.jpg">
+<img alt="Lab work 1" src="retreat2.jpg"/>
 <div class="caption">Laboratory of Axon Growth and Regeneration: Dr. Ishwariya Venkatesh &amp; Team</div>
-</img></div>
+</div>
 <div class="gallery-item" data-tags="lab">
-<img alt="Lab work 2" src="chapterkanpur.jpg">
+<img alt="Lab work 2" src="chapterkanpur.jpg"/>
 <div class="caption">Social and Affective Cognition Lab : Dr. KM Sharika &amp; Team</div>
-</img></div>
+</div>
 <div class="gallery-item" data-tags="lab">
-<img alt="Lab work 3" src="JNCASR2.jpg">
+<img alt="Lab work 3" src="JNCASR2.jpg"/>
 <div class="caption">Chronobiology and Behavioural Neurogenetics Lab: Prof. Dr. Sheeba Vasu &amp; Team</div>
-</img></div>
+</div>
 <div class="gallery-item" data-tags="lab">
-<img alt="Lab work 4" src="ACTREC.jpg">
+<img alt="Lab work 4" src="ACTREC.jpg"/>
 <div class="caption">Autophagy Lab: Dr. Pritha Ray &amp; Team</div>
-</img></div>
+</div>
 <div class="gallery-item" data-tags="conferences">
-<img alt="Conference 1" src="hyscif.jpg">
+<img alt="Conference 1" src="hyscif.jpg"/>
 <div class="caption">Presenting at HySci: IIT-Hyderabad Chapter'24</div>
-</img></div>
+</div>
 <div class="gallery-item" data-tags="conferences">
-<img alt="Conference 2" src="CMMDR2.jpg">
+<img alt="Conference 2" src="CMMDR2.jpg"/>
 <div class="caption">Cellular and Molecular Mechanisms of Development and Regeneration: Shiv Nadar University (Feb, 2024)</div>
-</img></div>
+</div>
 <div class="gallery-item" data-tags="conferences">
 <img alt="Conference 3" src="kanpurf.jpg"/>
 <div class="caption">Presenting at SURGE'23 - IIT Kanpur</div>
