--- a/index.html
+++ b/index.html
@@ -1137,11 +1137,11 @@
 </div>
 <div class="edu-institute mainz-font"><strong>Johannes Gutenberg University Mainz</strong> <span class="edu-country">| Germany</span></div>
 <div class="edu-institution"><b><i>Institution:</i></b> Institute of Developmental Biology and Neurobiology (iDN)</div>
-<div class="edu-thesis"><b><i>Dissertation Title:</i></b> Interactive Biomaterials for Neural Regeneration(InteReg)</div>
+<div class="edu-thesis"><b><i>Project Title:</i></b> Interactive Biomaterials for Neural Regeneration(InteReg)</div>
 <div class="edu-pis"><b><i>PIs:</i></b>
-<a href="https://fnb-idn.biologie.uni-mainz.de/" style="color: inherit; text-decoration: none;" target="_blank">Prof. Dr. Martin Heine</a>,
-    <a href="https://cnb-idn.biologie.uni-mainz.de/" style="color: inherit; text-decoration: none;" target="_blank">Prof. Dr. Claire Jacob</a>,
-    <a href="https://cnb-idn.biologie.uni-mainz.de/" style="color: inherit; text-decoration: none;" target="_blank">Dr. Himanshu Kumar Mishra</a>
+<a href="https://fnb-idn.biologie.uni-mainz.de/" style="color: inherit; text-decoration: none;" target="_blank">Prof. Dr. Martin Heine(Group Leader of Functional Neurobiology Lab)</a>,
+    <a href="https://cnb-idn.biologie.uni-mainz.de/" style="color: inherit; text-decoration: none;" target="_blank">Prof. Dr. Claire Jacob(Group Leader of Cellular Neurobiology Lab)</a>,
+    <a href="https://cnb-idn.biologie.uni-mainz.de/" style="color: inherit; text-decoration: none;" target="_blank">Dr. Himanshu Kumar Mishra(Junior Group Leader of Cellular Neurobiology Lab)</a>, at iDN.
 </div>
 </div>
 </div>
@@ -1157,7 +1157,7 @@
 </div>
 <div class="edu-institute vb-font"><strong>Visva-Bharati</strong> <span class="edu-country">| India</span></div>
 <div class="edu-institution"><b><i>Institution:</i></b> Integrated Science Education and Research Centre (ISERC)</div>
-<div class="edu-thesis"><b><i>Dissertation Title:</i></b> High-content screening(HCS) for neurite growth analyses: Evaluating gene treatments</div>
+<div class="edu-thesis"><b><i>Thesis Title:</i></b> High-content screening(HCS) for neurite growth analyses: Evaluating gene treatments.</div>
 <div class="edu-pis">
 <b><i>PI:</i></b>
 <a href="https://www.ccmb.res.in/People/Research-Group/Ishwariya-Venkatesh" style="color: inherit; text-decoration: none;" target="_blank">
