--- a/index.html
+++ b/index.html
@@ -1215,20 +1215,18 @@
 <button class="pub-filter" data-filter="book">Book Chapters</button>
 </div>
 <div class="pub-timeline">
-<!--
       <div class="pub-item" data-type="research">
         <div class="pub-dot"></div>
         <div class="pub-content">
-          <div class="pub-title"></div>
+          <div class="pub-title">Nuclear Receptor Transcription Factors promote axon regeneration in the Adult Corticospinal Tract</div>
           <div class="pub-meta">
-            <span class="pub-journal"><em></em></span>
-            <span class="pub-authors"><b></b></span>
-            <span class="pub-year"><b></b></span>
+            <span class="pub-journal"><em>bioRxiv</em></span>
+            <span class="pub-authors"><b>Yogesh Sahu, Soupayan Banerjee, Manojkumar Kumaran, Katha Sanyal, Meghana Konda, Shringika Soni, Anisha S Menon, Sneha Manjunath, Dhruva Kumar Kesireddy, Deepta Susan Beji, Prakash Chermakani, Arupam Biswas, Ishwariya Venkatesh</b></span>
+            <span class="pub-year"><b>2025</b></span>
             <span class="pub-details"></span>
-            <a class="pub-btn" href="" target="_blank"></a>
+            <a class="pub-btn" href="https://doi.org/10.1101/2025.06.19.660319" target="_blank"></a>
           </div>
         </div>
-      -->
 </div>
 <div class="pub-item" data-type="review">
 <div class="pub-dot"></div>
