--- a/index.html
+++ b/index.html
@@ -1224,7 +1224,7 @@
             <span class="pub-authors"><b>Yogesh Sahu, Soupayan Banerjee, Manojkumar Kumaran, Katha Sanyal, Meghana Konda, Shringika Soni, Anisha S Menon, Sneha Manjunath, Dhruva Kumar Kesireddy, Deepta Susan Beji, Prakash Chermakani, Arupam Biswas, Ishwariya Venkatesh</b></span>
             <span class="pub-year"><b>2025</b></span>
             <span class="pub-details"></span>
-            <a class="pub-btn" href="https://doi.org/10.1101/2025.06.19.660319" target="_blank"></a>
+            <a class="pub-btn" href="https://doi.org/10.1101/2025.06.19.660319" target="_blank">DOI</a>
           </div>
         </div>
 </div>
