--- a/index.html
+++ b/index.html
@@ -1139,9 +1139,7 @@
 <div class="edu-institution"><b><i>Institution:</i></b> Institute of Developmental Biology and Neurobiology (iDN)</div>
 <div class="edu-thesis"><b><i>Project Title:</i></b> Interactive Biomaterials for Neural Regeneration(InteReg)</div>
 <div class="edu-pis"><b><i>PIs:</i></b>
-<a href="https://fnb-idn.biologie.uni-mainz.de/" style="color: inherit; text-decoration: none;" target="_blank">Prof. Dr. Martin Heine(Group Leader of Functional Neurobiology Lab)</a>,
-    <a href="https://cnb-idn.biologie.uni-mainz.de/" style="color: inherit; text-decoration: none;" target="_blank">Prof. Dr. Claire Jacob(Group Leader of Cellular Neurobiology Lab)</a>,
-    <a href="https://cnb-idn.biologie.uni-mainz.de/" style="color: inherit; text-decoration: none;" target="_blank">Dr. Himanshu Kumar Mishra(Junior Group Leader of Cellular Neurobiology Lab)</a>, at iDN.
+<a href="https://fnb-idn.biologie.uni-mainz.de/" style="color: inherit; text-decoration: none;" target="_blank">Prof. Dr. Martin Heine(Group Leader of Functional Neurobiology Lab)</a>, at iDN.
 </div>
 </div>
 </div>
