--- a/index.html
+++ b/index.html
@@ -1319,7 +1319,7 @@
 </section>
 <section class="get-in-touch" id="get-in-touch">
 <h2>Get in Touch</h2>
-<p><strong>Email:</strong> arupambiswas007@gmail.com</p>
+<p><strong>Email:</strong> abiswas@uni-mainz.de</p>
 <p><strong>Lab:</strong> Prof. Dr. Martin Heine, <a class="lab-highlight" href="https://fnb-idn.biologie.uni-mainz.de/" target="_blank">Functional Neurobiology Lab</a> at JGU</p>
 <p><strong>Address:</strong><br/>
       Institute for Developmental Biology and Neurobiology (iDN)<br/>
