--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,7 @@
 <a class="twitter" href="https://x.com/arupamb07" target="_blank">
 <img alt="X Logo" src="twitterFL.jpg"/>
 </a>
-<a aria-label="Email" class="gmail" href="mailto:arupambiswas007@gmail.com" target="_blank">
+<a aria-label="Email" class="gmail" href="mailto:abiswas@uni-mainz.de" target="_blank">
 <img alt="Gmail Logo" src="gmail.jpg"/>
 </a>
 </div>
