--- a/index.html
+++ b/index.html
@@ -1279,19 +1279,22 @@
 </div>
 <div class="gallery-grid">
 <div class="gallery-item" data-tags="lab">
-<img alt="Lab work 1" src="retreat2.jpg"/>
+<img alt="Lab work 1" src="IMG_0018.jpeg"/>
+<div class="caption">Functional Neurobiology Laboratory: Prof. Dr. Martin Heine &amp; Team</div>
+</div>
+<img alt="Lab work 2" src="retreat2.jpg"/>
 <div class="caption">Laboratory of Axon Growth and Regeneration: Dr. Ishwariya Venkatesh &amp; Team</div>
 </div>
 <div class="gallery-item" data-tags="lab">
-<img alt="Lab work 2" src="chapterkanpur.jpg"/>
+<img alt="Lab work 3" src="chapterkanpur.jpg"/>
 <div class="caption">Social and Affective Cognition Lab : Dr. KM Sharika &amp; Team</div>
 </div>
 <div class="gallery-item" data-tags="lab">
-<img alt="Lab work 3" src="JNCASR2.jpg"/>
+<img alt="Lab work 4" src="JNCASR2.jpg"/>
 <div class="caption">Chronobiology and Behavioural Neurogenetics Lab: Prof. Dr. Sheeba Vasu &amp; Team</div>
 </div>
 <div class="gallery-item" data-tags="lab">
-<img alt="Lab work 4" src="ACTREC.jpg"/>
+<img alt="Lab work 5" src="ACTREC.jpg"/>
 <div class="caption">Autophagy Lab: Dr. Pritha Ray &amp; Team</div>
 </div>
 <div class="gallery-item" data-tags="conferences">
