--- a/index.html
+++ b/index.html
@@ -1282,6 +1282,7 @@
 <img alt="Lab work 1" src="IMG_0018.jpeg"/>
 <div class="caption">Functional Neurobiology Laboratory: Prof. Dr. Martin Heine &amp; Team</div>
 </div>
+<div class="gallery-item" data-tags="lab">
 <img alt="Lab work 2" src="retreat2.jpg"/>
 <div class="caption">Laboratory of Axon Growth and Regeneration: Dr. Ishwariya Venkatesh &amp; Team</div>
 </div>
